nginx/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx-app
    name: nginx
spec:
  ports:
    - name: nginx-port
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx
